fix(CalendarSummary): adjusted styles to be more visible

--- a/src/CalendarSummaryTable/TableEntry/index.module.scss
+++ b/src/CalendarSummaryTable/TableEntry/index.module.scss
@@ -2,12 +2,12 @@
 @import "../../styles/mixins";
 
 .entry {
-  font-size: $font-size-small;
+  font-size: $font-size-medium;
   font-weight: $font-weight-regular;
   color: $color-neutral-dark;
-  padding: $space-2;
+  padding: $space-1 $space-2;
 
   @include mobile {
-    padding: $space-2 $space-4;
+    padding: $space-1 $space-4;
   }
 }
