--- a/src/CalendarSummaryTable/TableFoot/index.module.scss
+++ b/src/CalendarSummaryTable/TableFoot/index.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/mixins";
 
 .heading {
-  font-size: $font-size-small;
+  font-size: $font-size-medium;
   font-weight: $font-weight-semibold;
   color: $color-neutral-dark;
   padding: 0 $space-2;
@@ -13,12 +13,12 @@
 }
 
 .entry {
-  font-size: $font-size-small;
+  font-size: $font-size-medium;
   font-weight: $font-weight-regular;
   color: $color-neutral-dark;
-  padding: $space-2;
+  padding: $space-1 $space-2;
 
   @include mobile {
-    padding: $space-2 $space-4;
+    padding: $space-1 $space-4;
   }
 }
