--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,7 +29,6 @@ $font-weight-semibold: 600;
 // font-size
 $font-size-large: 18px;
 $font-size-medium: 14px;
-$font-size-small: 12px;
 
 // Layout constants
 $max-container-width: 1000px;
